--- a/RepairLogServer/Workspace/Edit.xaml
+++ b/RepairLogServer/Workspace/Edit.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="RepairLogServer.Workspace.Add"
+﻿<Window x:Class="RepairLogServer.Workspace.Edit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RepairLogServer.Workspace"
         mc:Ignorable="d"
-        ResizeMode="NoResize"
-        WindowStartupLocation="Manual" Left="700" Top="0"
-        Title="Add" Height="400" Width="300">
+        Title="Edit" Height="450" Width="800">
     <Grid x:Name="_grid">
+        
     </Grid>
 </Window>
